Overall webapp style

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -7,7 +7,8 @@
     },
     "home": {
       "title": "A good friend always pays his debts",
-      "pitch": "Organize events and split expenses between participants."
+      "pitch": "Organize events and split expenses between participants.",
+      "tyrion": "Tyrion Lannister approves."
     }
   }
 }
