--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -7,7 +7,8 @@
     },
     "home": {
       "title": "Un bon ami paye toujours ses dettes",
-      "pitch": "Organisez des événements et répartissez les dépenses entre les participants."
+      "pitch": "Organisez des événements et répartissez les dépenses entre les participants.",
+      "tyrion": "Tyrion Lannister approuve."
     }
   }
 }
