Create event form internationalization

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -9,10 +9,22 @@
       "title": "A good friend always pays his debts",
       "pitch": "Organize events and split expenses between participants.",
       "tyrion": "Tyrion Lannister approves.",
-      "errors": {
-        "EVENT_NAME_REQUIRED": "You must specify a name for the event",
-        "PARTICIPANTS_REQUIRED": "You must specify at least one participant for the event",
-        "CREATE_EVENT_DEFAULT_ERROR": "Sorry, there was a problem creating the event"
+      "event_form": {
+        "event_name": "Event name",
+        "event_name_ph": "Weekend at the beach",
+        "participant_name": "Participant name",
+        "participant_email": "Participant email",
+        "participant_share": "Share",
+        "add_participant": "Add a participant",
+        "remove_participant": "Remove this participant",
+        "create": "Create the event",
+        "field_required_help": "Field required",
+        "email_help": "Emails are used to send reminders and nothing else",
+        "errors": {
+          "EVENT_NAME_REQUIRED": "You must specify a name for the event",
+          "PARTICIPANTS_REQUIRED": "You must specify at least one participant for the event",
+          "CREATE_EVENT_DEFAULT_ERROR": "Sorry, there was a problem creating the event"
+        }
       }
     }
   }
