--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -19,10 +19,13 @@
         "remove_participant": "Remove this participant",
         "create": "Create the event",
         "field_required_help": "Field required",
-        "email_help": "Emails are used to send reminders and nothing else",
+        "email_help": "Emails are used to send reminders and nothing else.",
         "errors": {
           "EVENT_NAME_REQUIRED": "You must specify a name for the event",
           "PARTICIPANTS_REQUIRED": "You must specify at least one participant for the event",
+          "PARTICIPANT_NAME_REQUIRED": "You must specify a name for each participant",
+          "PARTICIPANT_SHARE_REQUIRED": "You must specify the share of each participant",
+          "INVALID_SHARE": "The share of each participant must be greater than 0",
           "CREATE_EVENT_DEFAULT_ERROR": "Sorry, there was a problem creating the event"
         }
       }
