--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -18,7 +18,6 @@
         "add_participant": "Add a participant",
         "remove_participant": "Remove this participant",
         "create": "Create the event",
-        "field_required_help": "Field required",
         "email_help": "Emails are used to send reminders and nothing else.",
         "errors": {
           "EVENT_NAME_REQUIRED": "You must specify a name for the event",
@@ -33,7 +32,36 @@
     "event": {
       "with": "With",
       "purchased_by": "Purchased by",
-      "shared_between": "Purchase shared between"
+      "shared_between": "Purchase shared between",
+      "purchase_form": {
+        "title": "Add a purchase",
+        "label": "Label",
+        "label_ph": "Errands for the BBQ",
+        "purchaser": "Purchaser",
+        "purchaser_ph": "Choose...",
+        "amount": "Amount spent",
+        "amount_ph": "12.56",
+        "amount_precision": ".00",
+        "share_with": {
+          "label": "Share between",
+          "all": "All",
+          "none": "None",
+          "selected": "selected",
+          "ph": "Choose among the participants..."
+        },
+        "description_ph": "For further clarification",
+        "submit": "Add the purchase",
+        "errors": {
+          "PURCHASE_PURCHASER_REQUIRED": "You must select a purchaser",
+          "PURCHASE_LABEL_REQUIRED": "You must specify a label for the purchase",
+          "PURCHASE_AMOUNT_REQUIRED": "You must specify the amount of the purchase",
+          "INVALID_AMOUNT": "The specified amount must be greater than 0",
+          "ADD_PURCHASE_DEFAULT_ERROR": "Sorry, the purchase could not be added"
+        }
+      }
+    },
+    "form": {
+      "field_required_help": "Field required"
     }
   }
 }
