--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -42,6 +42,7 @@
     },
     "event": {
       "with": "Avec",
+      "result": "Voir le résultat de l'événement",
       "purchased_by": "Achat effectué par",
       "shared_between": "Dépense partagée entre",
       "purchase_form": {
@@ -71,6 +72,13 @@
           "ADD_PURCHASE_DEFAULT_ERROR": "Désolé, la dépense n'a pas pu être ajoutée"
         }
       }
+    },
+    "debts": {
+      "back": "Retour à l'événement",
+      "total_spent": "Somme totale dépensée :",
+      "creditor": "Créancier",
+      "debt": "Dette",
+      "total": "Total"
     },
     "form": {
       "field_required_help": "Champ requis"
