--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -44,10 +44,13 @@
     },
     "event": {
       "with": "With",
-      "result": "See event result",
       "purchased_by": "Purchased by",
       "shared_between": "Expense shared between",
       "load_more": "See more expenses",
+      "tabs": {
+        "details": "Details",
+        "result": "Result"
+      },
       "expense_form": {
         "title": "Add an expense",
         "label": "Label",
@@ -77,7 +80,6 @@
       }
     },
     "debts": {
-      "back": "Back to the event",
       "total_spent": "Total amount spent:",
       "creditor": "Creditor",
       "debt": "Debt",
