--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -44,10 +44,13 @@
     },
     "event": {
       "with": "Avec",
-      "result": "Voir le résultat de l'événement",
       "purchased_by": "Achat effectué par",
       "shared_between": "Dépense partagée entre",
       "load_more": "Voir plus de dépenses",
+      "tabs": {
+        "details": "Détails",
+        "result": "Résultat"
+      },
       "expense_form": {
         "title": "Ajouter une dépense",
         "label": "Label",
@@ -77,7 +80,6 @@
       }
     },
     "debts": {
-      "back": "Retour à l'événement",
       "total_spent": "Somme totale dépensée :",
       "creditor": "Créancier",
       "debt": "Dette",
