Display participant share in event result view

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -80,6 +80,7 @@
       }
     },
     "debts": {
+      "share": "share",
       "total_spent": "Total amount spent:",
       "creditor": "Creditor",
       "debt": "Debt",
