--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -14,6 +14,10 @@
       "EXPENSE_ADDED_SUCCESS": {
         "title": "Done!",
         "content": "The expense has been added to the event successfully."
+      },
+      "EXPENSE_DELETED_SUCCESS": {
+        "title": "Done!",
+        "content": "The expense has been deleted from the event successfully."
       }
     },
     "home": {
@@ -46,6 +50,8 @@
       "with": "With",
       "purchased_by": "Purchased by",
       "shared_between": "Expense shared between",
+      "actions": "Actions",
+      "delete": "Delete",
       "load_more": "See more expenses",
       "tabs": {
         "details": "Details",
