Filter results by name

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -98,6 +98,9 @@
       }
     },
     "debts": {
+      "filters": {
+        "name": "Filter by name:"
+      },
       "share": "share",
       "total_spent": "Total amount spent:",
       "creditor": "Creditor",
