--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -120,7 +120,8 @@
           "errors": {
             "PARTICIPANT_NAME_REQUIRED": "You must specify the name of the participant.",
             "PARTICIPANT_SHARE_REQUIRED": "You must specify the name of the participant.",
-            "INVALID_SHARE": "The share of the participant must be greater than 0."
+            "INVALID_SHARE": "The share of the participant must be greater than 0.",
+            "ADD_PARTICIPANT_DEFAULT_ERROR": "Sorry, the participant could not be added"
           }
         }
       }
