--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -58,7 +58,7 @@
       "delete": "Supprimer",
       "load_more": "Voir plus de dépenses",
       "tabs": {
-        "details": "Détails",
+        "expenses": "Dépenses",
         "participants": "Participants",
         "result": "Résultat"
       },
